fix box-shadow header on mobile view

--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -199,12 +199,12 @@
         position: fixed;
         top: 0;
         gap: 0;
-        right: -250px;
+        right: -300px;
         width: 250px; 
         max-height: 1080px;
         background-color: white;
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
         flex-direction: column;
         align-items: flex-start;
         padding: 20px;
@@ -222,6 +222,8 @@
 
     .nav-menu ul {
         display: flex;
+        
+        align-items: flex-start;
         flex-direction: column;
         width: 100%;
     }
